# nonebot-plugin-arkguesser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
nonebot_plugin_arkguesser/: __init__.py  config.py  pool_manager.py  render.py
nonebot_plugin_arkguesser/game_tools/: __init__.py  char_art_layout.py  config.py  continuous_manager.py  game.py  mode_manager.py  pool_manager.py  render.py
nonebot_plugin_arkguesser/resource_tools/: __init__.py  char_art_match.py  char_art_update.py  cv_head_match.py  data_update.py  head_align_csv.py  illustration_config.py  illustration_downloader_v2.py  run_illustration_download.py  update_simple.py
nonebot_plugin_arkguesser/resources/data/: characters.csv  continuous_settings.json  mode_settings.json
nonebot_plugin_arkguesser/resources/templates/: new_base.html  new_theme.css
scripts/: render_six_star_answer_panels.py  test_resource_tools_pipeline.py
